--- a/04_CSS/Colors/style.css
+++ b/04_CSS/Colors/style.css
@@ -14,7 +14,7 @@
     margin-top: 10px;
 }
 .verd{
-    background-color: greenyellow;
+    background-color: #00FF00;
     display: inline-block;
     height: 50px;
     width: 50px;
