--- a/04_CSS/Clon-Spotify/styles/style.css
+++ b/04_CSS/Clon-Spotify/styles/style.css
@@ -32,7 +32,8 @@ body {
     color: var(--text);
     padding: 5px;
 }
-.cont-2{
+
+.cont-2 {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,55 +43,64 @@ body {
     width: 100vw;
     background-size: cover;
     background-position: center;
-    
+
 }
 
-.title-1{
+.title-1 {
     color: var(--blanc);
     text-align: center;
-    
+
 }
-.box-1{
-    color: var(--blanc);
-    text-align: center;
-}
-.box-2{
+
+.box-1 {
     color: var(--blanc);
     text-align: center;
 }
 
-.cont-3{
+.box-2 {
+    color: var(--blanc);
+    text-align: center;
+}
+
+.cont-3 {
     display: flex;
     justify-content: center;
 }
-.box-3{
+
+.box-3 {
     display: inline-block;
     font-weight: bold;
-    border-bottom: 2px solid  var(--verd);
+    border-bottom: 2px solid var(--verd);
 }
-.dibuix{
+
+.dibuix {
     max-width: 100px;
 
 }
-.nom{
+
+.nom {
     color: var(--verd);
     text-align: center;
 }
-.text{
+
+.text {
     text-align: center;
 }
+
 .cont-4 {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
-.box{
+
+.box {
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
 }
-.cont-5{
+
+.cont-5 {
     background-color: var(--verd);
     color: var(--blanc);
     display: flex;
@@ -98,12 +108,84 @@ body {
     align-items: center;
 
 }
-.logoB{
+
+.logoB {
     max-width: 100px;
 }
-.app{
+
+.app {
     max-width: 200px;
 }
-.title-2{
+
+.title-2 {
     text-decoration: underline;
 }
+
+/* !Resolució per tables */
+@media(300px < width < 500px) {
+    .cont-1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+
+    .cont-5 {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .app {
+        margin: 10px;
+    }
+}
+
+    /* ?Resolució per smartphone */
+    @media (width < 300px) {
+        .cont-1{
+            display: flex;
+            flex-direction: column;
+        }
+        #pos-1{
+            float: left;
+        }
+        #pos-2{
+            float: right;
+        }
+        #pos-3{
+            clear: both;
+            float: left;
+        }
+        #pos-4{
+            float: right;
+        }
+        .title-1 {
+            color: var(--blanc);
+            text-align: center;
+            font-size: medium;
+        }
+        
+        .box-1 {
+            color: var(--blanc);
+            text-align: center;
+            font-size:small;
+        }
+        
+        .box-2 {
+            color: var(--blanc);
+            text-align: center;
+            font-size: small;
+        }
+        .cont-4{
+            display: flex;
+            flex-flow: column wrap;
+        }
+        .cont-5{
+            display: flex;
+            flex-flow: column wrap;
+        }
+        .app {
+            margin: 10px;
+        }
+    }
