--- a/04_CSS/Frontend Challenge/style.css
+++ b/04_CSS/Frontend Challenge/style.css
@@ -25,20 +25,7 @@
 }
 
 /* Desktop */
-body {
-    margin: 10vh 10vw;
-}
 
-.container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 60vh;
-}
-
-article {
-    width: 30vw;
-}
 
 img {
     width: 60px;
@@ -62,8 +49,7 @@ h2 {
     background-color: var(--sedan-bg);
     color: var(--sedan-color);
     padding: 20px;
-    border-top-left-radius: 15px 15px;
-    border-bottom-left-radius: 15px 15px;
+
 }
 
 .suvs {
@@ -82,8 +68,7 @@ h2 {
     background-color: var(--luxury-bg);
     color: var(--luxury-color);
     padding: 20px;
-    border-top-right-radius: 15px 15px;
-    border-bottom-right-radius: 15px 15px;
+
 }
 
 .box {
@@ -118,19 +103,58 @@ h2 {
     color: hsl(228, 45%, 44%);
 }
 
-/* Mobile */
-@media (width < 800px){
-    body{
-        margin: 0px;
+/* Desktop */
+@media (521px < width < 1440px) {
+    body {
+        margin: 10vh 10vw;
+        font-size: 15px;
     }
+
+    .container {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        height: 60vh;
+    }
+
+    article {
+        width: 30vw;
+    }
+
+    .sedan {
+        border-top-left-radius: 15px 15px;
+        border-bottom-left-radius: 15px 15px;
+    }
+
+    .luxury {
+        border-top-right-radius: 15px 15px;
+        border-bottom-right-radius: 15px 15px;
+    }
+}
+
+/* Mobile */
+@media (width < 520px) {
+    body {
+        margin: 45px 15px;
+    }
+
     .container {
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 0px;
+        height: auto;
     }
-    .suvs{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
+
+    .sedan {
+        border-top-left-radius: 15px 15px;
+        border-top-right-radius: 15px 15px;
+    }
+
+    .suvs {}
+
+    .luxury {
+        border-bottom-right-radius: 15px 15px;
+        border-bottom-left-radius: 15px 15px;
     }
 }
