--- a/04_CSS/Lab-CSS/starter-code/style.css
+++ b/04_CSS/Lab-CSS/starter-code/style.css
@@ -1,5 +1,33 @@
-body {
-  background-color: red;
+.logo {
+  width: 50px;
+  padding-right: 10px;
+}
+
+header {
+  width: 100vw;
+}
+
+.first-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.search-bar {
+  display: flex;
+  flex-direction: row;
+  border: 1px lightgray solid;
+  width: 60vw;
+  align-items: center;
+}
+
+.login-box {
+  width: 300px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding-left: 10px;
 }
 
 @media (892px < width < 1099px) {
