--- a/04_CSS/Lab-CSS/starter-code/style.scss
+++ b/04_CSS/Lab-CSS/starter-code/style.scss
@@ -1,24 +1,47 @@
-// Large width
-body {
-  background-color: red;
+.logo {
+  width: 50px;
+  padding-right: 10px;
 }
 
+header {
+  width: 100vw;
+}
 
-// Medium width
+.first-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.search-bar {
+  display: flex;
+  flex-direction: row;
+  border: 1px lightgray solid;
+  width: 60vw;
+  align-items: center;
+}
+
+.login-box {
+  width: 300px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+  padding-left: 10px;
+}
+
 @media (892px < width < 1099px) {
   body {
     background-color: blue;
   }
 }
 
-// Small width
 @media (601px < width < 891px) {
   body {
     background-color: greenyellow;
   }
 }
 
-// Extra small width
 @media (width <=600px) {
   body {
     background-color: orange;
