--- a/04_CSS/Lab-CSS/starter-code/style.scss
+++ b/04_CSS/Lab-CSS/starter-code/style.scss
@@ -1,49 +1,52 @@
-.logo {
-  width: 50px;
-  padding-right: 10px;
+// LG large width < 1100px
+body {
+  margin: 0px;
+  // display: grid;
+  height: 100vh;
+  // grid-template-columns: 20vw 50vw 10vw 20vw;
+  // grid-template-rows: 100px 25px 50px 25px 2fr 15px 3fr 15px 3fr 15px 3fr 15px;
 }
 
-header {
-  width: 100vw;
+header{
+  display: grid;
+  height: 100px;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 50px 50px;
 }
 
-.first-bar {
+#logo{
+  width: 40px;
+}
+
+.conth{
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.conth-1{
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
 }
 
-.search-bar {
+.boxh{
   display: flex;
   flex-direction: row;
+  align-items: center;
+}
+
+.boxh-1 {
   border: 1px lightgray solid;
-  width: 60vw;
-  align-items: center;
-}
-
-.login-box {
-  width: 300px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-around;
-  padding-left: 10px;
 }
 
 @media (892px < width < 1099px) {
-  body {
-    background-color: blue;
-  }
+  
 }
 
 @media (601px < width < 891px) {
-  body {
-    background-color: greenyellow;
-  }
+  
 }
 
 @media (width <=600px) {
-  body {
-    background-color: orange;
-  }
+
 }
