--- a/04_CSS/Lab-CSS/starter-code/style.css
+++ b/04_CSS/Lab-CSS/starter-code/style.css
@@ -1,17 +1,18 @@
 body {
-  margin: 0px;
+  margin: 10px 0px;
   height: 100vh;
 }
 
 header {
   display: grid;
   height: 100px;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 4fr 1fr;
   grid-template-rows: 50px 50px;
 }
 
 #logo {
-  width: 40px;
+  width: 50px;
+  padding-right: 20px;
 }
 
 .conth {
@@ -22,7 +23,7 @@ header {
 .conth-1 {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .boxh {
@@ -33,4 +34,45 @@ header {
 
 .boxh-1 {
   border: 1px lightgray solid;
+  width: 600px;
+}
+
+.boxh-2 > div {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+nav {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+.conth-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.conth-2 > img {
+  width: 30px;
+  height: 30px;
+}
+
+nav > article,
+img {
+  color: grey;
+}
+nav > article:hover,
+img:hover {
+  color: black;
+  background-color: lightgray;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 4fr 25px 4fr;
+  grid-template-rows: 1fr 25px 3fr 25px 4fr 25px 4fr 25px 4fr 25px;
+  background-color: rgb(236, 236, 236);
+  height: 100px;
 }/*# sourceMappingURL=style.css.map */
