--- a/04_CSS/Lab-CSS/starter-code/style.css
+++ b/04_CSS/Lab-CSS/starter-code/style.css
@@ -1,6 +1,5 @@
 body {
   margin: 10px 0px;
-  height: 100vh;
 }
 
 header {
@@ -72,6 +71,71 @@ img:hover {
 main {
   display: grid;
   grid-template-columns: 1fr 4fr 25px 2fr 1fr;
-  grid-template-rows: 1fr 25px 3fr 25px 4fr 25px 4fr 25px 4fr 25px;
+  grid-template-rows: 25px 50px 25px 3fr 25px 4fr 25px 4fr 25px 4fr 25px;
   background-color: rgb(236, 236, 236);
+}
+
+.barm {
+  grid-column: 2/5;
+  grid-row: 2/3;
+}
+
+.contm-1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background-color: white;
+}
+
+#close {
+  width: 15px;
+}
+
+.boxm-1 {
+  font-weight: bold;
+}
+
+.boxm-2 {
+  color: gray;
+}
+
+.boxm-3 {
+  color: gray;
+  width: 150px;
+  border: 1px gray solid;
+}
+
+.boxm-4 {
+  color: white;
+  background-color: rgb(218, 85, 47);
+  border-radius: 5px 5px;
+}
+
+.sidem-1 {
+  grid-column: 4/5;
+  grid-row: 4/5;
+  background-color: white;
+  padding: 10px;
+}
+
+.sidem-2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: bold;
+}
+
+.sidem-3 {
+  color: gray;
+  font-size: small;
+  padding: 10px;
+}
+
+.sidem-4 {
+  color: white;
+  background-color: rgb(218, 85, 47);
+  border-radius: 5px 5px;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
