--- a/04_CSS/Lab-CSS/starter-code/style.scss
+++ b/04_CSS/Lab-CSS/starter-code/style.scss
@@ -1,8 +1,14 @@
+// Sistema de notes, al inici de cada bloc tindrem un comentari
+// que ens dirà quin component tracta cada bloc,
+//! Els comentaris amb aquest color son blocs principals
+//* Els comentaris amb aquest color son blocs secundaris
+
 // LG large width < 1100px
 body {
   margin: 10px 0px;
 }
 
+//! Barra benvinguda 
 header {
   display: grid;
   height: 100px;
@@ -10,6 +16,7 @@ header {
   grid-template-rows: 50px 50px;
 }
 
+//*Barra de cerca
 #logo {
   width: 50px;
   padding-right: 20px;
@@ -42,6 +49,7 @@ header {
   padding-left: 10px;
 }
 
+//* barra navegador
 .header-2 {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
@@ -69,6 +77,7 @@ img {
   }
 }
 
+//! Bloc principal
 main {
   display: grid;
   grid-template-columns: 1fr 4fr 25px 2fr 1fr;
@@ -76,6 +85,7 @@ main {
   background-color: rgb(236, 236, 236);
 }
 
+//* Barra lateral
 .welcome {
   grid-column: 2 / 5;
   grid-row: 2 / 3;
@@ -113,6 +123,7 @@ main {
   border-radius: 5px 5px;
 }
 
+//* Barra lateral Kitty
 .kitty-1 {
   grid-column: 4 / 5;
   grid-row: 4 / 5;
@@ -120,7 +131,7 @@ main {
   padding: 10px;
 }
 
-.kitty-2{
+.kitty-2 {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -128,17 +139,39 @@ main {
   font-weight: bold;
 }
 
-.kitty-3{
+.kitty-3 {
   color: gray;
   font-size: small;
   padding: 10px;
 }
 
-.kitty-4{
+.kitty-4 {
   color: white;
   background-color: rgb(218, 85, 47);
   border-radius: 5px 5px;
   text-align: center;
+}
+
+//* Barra lateral live chat
+.live-chat {
+  grid-column: 4 / 5;
+  grid-row: 6 / 9;
+  background-color: white;
+}
+
+.live-title {
+  text-align: center;
+}
+
+.separator {
+  border-bottom: 1px solid gray;
+  width: 80%;
+  margin: 10px auto;
+}
+
+#photo {
+  border-radius: 50%;
+  width: 50px;
 }
 
 @media (892px < width < 1099px) {}
