--- a/04_CSS/Lab-CSS/starter-code/style.css
+++ b/04_CSS/Lab-CSS/starter-code/style.css
@@ -71,7 +71,7 @@ img:hover {
 main {
   display: grid;
   grid-template-columns: 1fr 4fr 25px 2fr 1fr;
-  grid-template-rows: 25px 50px 25px 3fr 25px 4fr 25px 4fr 25px 4fr 25px;
+  grid-template-rows: 25px 50px 25px 2fr 25px 4fr 25px 4fr 25px 4fr 25px;
   background-color: rgb(236, 236, 236);
 }
 
@@ -138,6 +138,14 @@ main {
   background-color: rgb(218, 85, 47);
   border-radius: 5px 5px;
   text-align: center;
+  border: 1px solid transparent;
+}
+
+.kitty-4:hover {
+  background-color: white;
+  color: rgb(218, 85, 47);
+  border: 1px solid rgb(218, 85, 47);
+  border-radius: 5px;
 }
 
 .live-chat {
@@ -148,10 +156,11 @@ main {
 
 .live-title {
   text-align: center;
+  margin: 15px;
 }
 
 .separator {
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid lightgray;
   width: 80%;
   margin: 10px auto;
 }
@@ -159,4 +168,54 @@ main {
 #photo {
   border-radius: 50%;
   width: 50px;
+  float: left;
+  padding-right: 10px;
+}
+
+.live-box {
+  margin: 5px;
+}
+
+.live-name {
+  font-weight: bold;
+}
+
+.lve-job {
+  color: grey;
+}
+
+#remind {
+  border: 1px solid gray;
+  padding: 5px 10px;
+  background-color: white;
+  color: black;
+  font-size: x-small;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+  text-align: center;
+}
+
+#remind:hover {
+  background-color: gray;
+  color: white;
+}
+
+.live-container {
+  text-align: center;
+}
+
+.live-more {
+  background-color: white;
+  font-weight: bold;
+  color: rgb(218, 85, 47);
+  text-align: center;
+  padding: 5px 10px;
+  border: 2px solid transparent;
+  border-radius: 5px;
+}
+
+.live-more:hover {
+  border: 2px solid rgb(218, 85, 47);
+  background-color: white;
+  border-radius: 5px;
 }/*# sourceMappingURL=style.css.map */
