--- a/05_JavaScript_JQuerry/Calculadora/style.css
+++ b/05_JavaScript_JQuerry/Calculadora/style.css
@@ -1,61 +1,286 @@
+.league-spartan {
+    font-family: "League Spartan", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+}
+
+:root {
+    /* Tema first */
+    --main-bg: hsl(222, 26%, 31%);
+    --screen-bg: hsl(224, 36%, 15%);
+    --keypad-bg: hsl(223, 31%, 20%);
+
+    --special-bg: hsl(225, 21%, 49%);
+    --special-bg-shadow: hsl(224, 28%, 35%);
+
+    --key-bg: hsl(30, 25%, 89%);
+    --key-bg-shadow: hsl(28, 16%, 65%);
+
+    --igual-bg: hsl(6, 63%, 50%);
+    --igual-bg-shadow: hsl(6, 70%, 34%);
+
+    --text: hsl(221, 14%, 31%);
+    --text-special: white;
+    --text-equal: white;
+    --text-screen: white;
+
+}
+
+/* Tema second (se aplicarán dinámicamente a través de JavaScript) */
+:root.second-theme {
+    --main-bg: hsl(0, 0%, 90%);
+    --screen-bg: hsl(0, 0%, 93%);
+    --keypad-bg: hsl(0, 5%, 81%);
+
+    --special-bg: hsl(185, 42%, 37%);
+    --special-bg-shadow: hsl(185, 58%, 25%);
+    --key-bg: hsl(45, 7%, 89%);
+    --key-bg-shadow: hsl(35, 11%, 61%);
+    --igual-bg: hsl(25, 98%, 40%);
+    --igual-bg-shadow: hsl(25, 99%, 27%);
+
+    --text: hsl(60, 10%, 19%);
+    --text-special: white;
+    --text-equal: white;
+    --text-screen: black;
+}
+
+/* Tema third (se aplicarán dinámicamente a través de JavaScript) */
+:root.third-theme {
+    --main-bg: hsl(268, 75%, 9%);
+    --screen-bg: hsl(268, 71%, 12%);
+    --keypad-bg: hsl(268, 71%, 12%);
+
+    --special-bg: hsl(281, 89%, 26%);
+    --special-bg-shadow: hsl(285, 91%, 52%);
+    --key-bg: hsl(268, 47%, 21%);
+    --key-bg-shadow: hsl(290, 70%, 36%);
+    --igual-bg: hsl(176, 100%, 44%);
+    --igual-bg-shadow: hsl(177, 92%, 70%);
+
+    --text: hsl(52, 100%, 62%);
+    --text-special: white;
+    --text-equal: hsl(198, 20%, 13%);
+    --text-screen: hsl(52, 100%, 62%);
+}
+
+/*!  Distribució calculadora*/
 body {
-    display: flex;
-    justify-content: center;
-    background-color: hsl(222, 26%, 31%);
     margin: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--main-bg);
 }
-.calculadora{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr 4fr;
+
+header {
     width: 500px;
-    height: 600px;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color: var(--text-screen);
 }
 
-.header{
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+main {
+    width: 500px;
 }
 
-.slider {
-    position: relative;
-    width: 300px; /* Ancho de la barra */
-    height: 10px; /* Alto de la barra */
-    background-color: #ccc; /* Color de la barra */
-    border-radius: 5px; /* Esquinas redondeadas */
-    margin: 20px;
+.screen {
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: row;
+    align-items: center;
+    width: inherit;
+    height: 80px;
+    font-size: 40px;
+    border-radius: 10px;
+    background-color: var(--screen-bg);
+    color: var(--text-screen);
 }
 
-.ball {
-    position: absolute;
-    width: 20px; /* Ancho de la bola */
-    height: 20px; /* Alto de la bola */
-    background-color: #007bff; /* Color de la bola */
-    border-radius: 50%; /* Es un círculo */
-    transition: left 0.2s ease; /* Transición suave al mover la bola */
+.resultat {
+    padding: 10px;
 }
 
-/* Posiciones para los valores 0, 1 y 2 */
-.position-0 {
-    left: 0; /* Posición 0 */
+.temas {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
 }
 
-.position-1 {
-    left: 50%; /* Posición 1 (centro) */
-    transform: translateX(-50%); /* Centrar la bola */
+.selector {
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.position-2 {
-    right: 0; /* Posición 2 */
+.keypad {
+    display: grid;
+    grid-template-columns: repeat(4, 20px 1fr) 20px;
+    grid-template-rows: repeat(5, 20px 76px) 20px;
+    width: 500px;
+    height: 500px;
+    background-color: var(--keypad-bg);
+    border-radius: 10px;
+    margin-top: 20px;
 }
 
+.button{
+    border-radius: 10px;
+    background-color: var(--key-bg);
+    color: var(--text);
+    font-weight: bold;
+    font-size: large;
+    box-shadow: 0 4px 0 0 var(--key-bg-shadow);
+}
 
-.pantalla{
-    grid-column: 1 / 2;
+.special{
+    background-color: var(--special-bg);
+    color: var(--text-special);
+    box-shadow: 0 4px 0 0 var(--special-bg-shadow);
+
+}
+
+.igual{
+    background-color: var(--igual-bg);
+    color: var(--text-equal);
+    box-shadow: 0 4px 0 0 var(--igual-bg-shadow);
+}
+
+/** Primera fila */
+#num7 {
+    grid-column: 2 / 3;
     grid-row: 2 / 3;
 }
 
-.teclat{
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
+#num8 {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+}
+
+#num9 {
+    grid-column: 6 / 7;
+    grid-row: 2 / 3;
+}
+
+#delete {
+    grid-column: 8 / 9;
+    grid-row: 2 / 3;
+}
+
+/** Segona fila  */
+#num4 {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+}
+
+#num5 {
+    grid-column: 4 / 5;
+    grid-row: 4 / 5;
+}
+
+#num6 {
+    grid-column: 6 / 7;
+    grid-row: 4 / 5;
+}
+
+#suma {
+    grid-column: 8 / 9;
+    grid-row: 4 / 5;
+}
+
+/** Tercera fila */
+#num1 {
+    grid-column: 2 / 3;
+    grid-row: 6 / 7;
+}
+
+#num2 {
+    grid-column: 4 / 5;
+    grid-row: 6 / 7;
+}
+
+#num3 {
+    grid-column: 6 / 7;
+    grid-row: 6 / 7;
+}
+
+#resta {
+    grid-column: 8 / 9;
+    grid-row: 6 / 7;
+}
+
+/** Quarta fila */
+#coma {
+    grid-column: 2 / 3;
+    grid-row: 8 / 9;
+}
+
+#num0 {
+    grid-column: 4 / 5;
+    grid-row: 8 / 9;
+}
+
+#divisio {
+    grid-column: 6 / 7;
+    grid-row:  8 / 9;
+}
+
+#mult {
+    grid-column: 8 / 9;
+    grid-row: 8 / 9;
+}
+
+/** Cinquena fila */
+#reset{
+    grid-column: 2 / 5;
+    grid-row: 10 / 11;
+}
+
+#igual{
+    grid-column: 6 / 9;
+    grid-row: 10 / 11;
+}
+
+
+/* Barra de temas i temas*/
+.theme-slider {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
+.theme-slider label {
+    margin: 0 10px;
+    font-size: 16px;
+}
+
+input[type="range"] {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 50px;
+    height: 10px;
+    padding: 3px;
+    background: var(--keypad-bg);
+    border-radius: 15px;
+    outline: none;
+    margin: 0 10px;
+    transition: background 0.3s;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 2px #000;
+    transition: background-color 0.3s;
+    background: var(--igual-bg);
 }
